# fsx-phase0

./: .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  eslint.config.cjs  hello.py  package-lock.json  package.json  pyproject.toml  sample.mjs  sample.py
src/app/: cli.py
