[project]
name = "chinmay-fsx-phase0"
version = "0.1.0"
description = "phase 0 starter package"
authors = [
    {name = "Carnage725",email = "chinmaytalnikar@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "app", from = "src" }]

[project.scripts]
hello = "app.cli:main"
