[project]
name = "chinmay-fsx-phase0"
version = "0.1.0"
description = "phase 0 starter package"
authors = [{ name = "Carnage725", email = "chinmaytalnikar@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
# map your import package to the src layout
packages = [{ include = "app", from = "src" }]

[project.scripts]
# creates a `hello` command -> app/cli.py:main()
hello = "app.cli:main"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.8"
isort = "^6.0.1"
mypy = "^1.17.1"
pre-commit = "^4.3.0"
pytest = "^8.4.1"

[tool.black]
line-length = 88
target-version = ["py311"]  # change to "py312" if you're on 3.12

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Let isort handle import sorting; silence ruff's isort rule
ignore = ["I001"]

[tool.mypy]
python_version = "3.11"     # set to "3.12" if needed
ignore_missing_imports = true
warn_unused_ignores = true
pretty = true
